tests/baselines/reference/parserConstructorAmbiguity1.errors.txt
==== tests/cases/compiler/parserConstructorAmbiguity1.ts (1 errors) ====
    new Date<A;
             ~
!!! parserConstructorAmbiguity1.ts(1,10): error TS2095: Cannot find name 'A'.